// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Slider should render and display markers 1`] = `
<div role="slider" tabindex="0" class="mdc-slider mdc-slider--discrete mdc-slider--display-markers" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100">
  <div class="mdc-slider__track-container">
    <div class="mdc-slider__track"></div>
    <div class="mdc-slider__track-marker-container"></div>
  </div>
  <div class="mdc-slider__thumb-container">
    <div class="mdc-slider__pin"><span class="mdc-slider__pin-value-marker"></span></div> <svg width="21" height="21" class="mdc-slider__thumb">
      <circle cx="10.5" cy="10.5" r="7.875"></circle>
    </svg>
    <div class="mdc-slider__focus-ring"></div>
  </div>
</div>
`;

exports[`Slider should render as disabled 1`] = `
<div aria-disabled="true" role="slider" class="mdc-slider mdc-slider--disabled" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100">
  <div class="mdc-slider__track-container">
    <div class="mdc-slider__track"></div>
    <!---->
  </div>
  <div class="mdc-slider__thumb-container"><svg width="21" height="21" class="mdc-slider__thumb">
      <circle cx="10.5" cy="10.5" r="7.875"></circle>
    </svg>
    <div class="mdc-slider__focus-ring"></div>
  </div>
</div>
`;

exports[`Slider should render as discrete 1`] = `
<div role="slider" tabindex="0" class="mdc-slider mdc-slider--discrete" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100">
  <div class="mdc-slider__track-container">
    <div class="mdc-slider__track"></div>
    <!---->
  </div>
  <div class="mdc-slider__thumb-container">
    <div class="mdc-slider__pin"><span class="mdc-slider__pin-value-marker"></span></div> <svg width="21" height="21" class="mdc-slider__thumb">
      <circle cx="10.5" cy="10.5" r="7.875"></circle>
    </svg>
    <div class="mdc-slider__focus-ring"></div>
  </div>
</div>
`;

exports[`Slider should render with no prop 1`] = `
<div role="slider" tabindex="0" class="mdc-slider" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100">
  <div class="mdc-slider__track-container">
    <div class="mdc-slider__track"></div>
    <!---->
  </div>
  <div class="mdc-slider__thumb-container"><svg width="21" height="21" class="mdc-slider__thumb">
      <circle cx="10.5" cy="10.5" r="7.875"></circle>
    </svg>
    <div class="mdc-slider__focus-ring"></div>
  </div>
</div>
`;
